--- a/app/views/pages/index.haml
+++ b/app/views/pages/index.haml
@@ -1,8 +1,8 @@
 %section.content
   %hgroup.jumbo
+    = image_tag 'jubi-logo.png'
     %h1.tagline
-      Das
-      %strong YFU Jubiläum 2017
-      findet <br> vom <strong>15. bis 18. Juni 2017</strong> in Berlin statt.
+      = t('index.teaser').html_safe
+    = image_tag 'yfu-logo-transparent.png'
 
 
