--- a/app/views/pages/index.haml
+++ b/app/views/pages/index.haml
@@ -1,7 +1,7 @@
 %section.content
   %hgroup.jumbo
     = image_tag 'jubi-logo.png'
-    %h1.tagline
+    .teaser
       = t('index.teaser').html_safe
     = image_tag 'yfu-logo-transparent.png'
 
