--- a/app/assets/stylesheets/site.css.scss
+++ b/app/assets/stylesheets/site.css.scss
@@ -307,12 +307,14 @@ a.button.header-button {
 
 hgroup.jumbo {
   text-align: center;
-  h1.tagline {
+  .teaser {
     font-family: $body-font-family;
-    font-size: rem-calc(35);
+    font-size: rem-calc(33);
+    line-height: 150%;
     font-weight: 200;
     text-align: left;
-    color: $royal-purple;
+    color: $yfu-text;
+    padding: 1em 0;
   }
   img.big-logo {
     @media #{$medium-up} {
