--- a/app/assets/stylesheets/national.scss
+++ b/app/assets/stylesheets/national.scss
@@ -2,24 +2,24 @@
   font-family:'YFU';
   font-weight:normal;
   font-style:normal;
-  src:font-url("/assets/NationalWeb-Regular.eot?#iefix") format("embedded-opentype"),
-  font-url("/assets/NationalWeb-Regular.woff") format("woff")
+  src:font-url("NationalWeb-Regular.eot?#iefix") format("embedded-opentype"),
+  font-url("NationalWeb-Regular.woff") format("woff")
 }
 @font-face{font-family:'YFU';
   font-weight:normal;
   font-style:italic;
-  src:font-url("/assets/NationalWeb-RegularItalic.eot?#iefix") format("embedded-opentype"),
-  font-url("/assets/NationalWeb-RegularItalic.woff") format("woff")
+  src:font-url("NationalWeb-RegularItalic.eot?#iefix") format("embedded-opentype"),
+  font-url("NationalWeb-RegularItalic.woff") format("woff")
 }
 @font-face{font-family:'YFU';
   font-weight:bold;
   font-style:italic;
-  src:font-url("/assets/NationalWeb-BoldItalic.eot?#iefix") format("embedded-opentype"),
-  font-url("/assets/NationalWeb-BoldItalic.woff") format("woff")
+  src:font-url("NationalWeb-BoldItalic.eot?#iefix") format("embedded-opentype"),
+  font-url("NationalWeb-BoldItalic.woff") format("woff")
 }
 @font-face{font-family:'YFU';
   font-weight:bold;
   font-style:normal;
-  src:font-url("/assets/NationalWeb-Bold.eot?#iefix") format("embedded-opentype"),
-  font-url("/assets/NationalWeb-Bold.woff") format("woff")
+  src:font-url("NationalWeb-Bold.eot?#iefix") format("embedded-opentype"),
+  font-url("NationalWeb-Bold.woff") format("woff")
 }
