--- a/app/views/pages/_team_introduction.haml
+++ b/app/views/pages/_team_introduction.haml
@@ -1,2 +1,4 @@
-%h2= name
-%p= t("team.#{name}.introduction")
+%li
+  %h2= name
+  %p= t("team.#{name}.job")
+  %blockquote= t("team.#{name}.introduction")
