--- a/app/views/pages/index.haml
+++ b/app/views/pages/index.haml
@@ -5,20 +5,21 @@
       = t('index.teaser').html_safe
     = image_tag 'yfu-logo-transparent.png'
 
-  %h1= t('team.meet the team')
-
-  = render partial: 'team_introduction', locals: {name: 'Alex Senger'}
-  = render partial: 'team_introduction', locals: {name: 'Cornelius Görres'}
-  = render partial: 'team_introduction', locals: {name: 'Felix Naumann'}
-  = render partial: 'team_introduction', locals: {name: 'Gerrit Rüdebusch'}
-  = render partial: 'team_introduction', locals: {name: 'Henning Perl'}
-  = render partial: 'team_introduction', locals: {name: 'Marlena Schultz-Brunn'}
-  = render partial: 'team_introduction', locals: {name: 'Matthias Otterbach'}
-  = render partial: 'team_introduction', locals: {name: 'Monika Keßler'}
-  = render partial: 'team_introduction', locals: {name: 'Nick Modersitzki'}
-  = render partial: 'team_introduction', locals: {name: 'Simon Born'}
-  = render partial: 'team_introduction', locals: {name: 'Simone Stepp'}
-  = render partial: 'team_introduction', locals: {name: 'Stefan Timmermann'}
-  = render partial: 'team_introduction', locals: {name: 'Theresa Veer'}
-  = render partial: 'team_introduction', locals: {name: 'Yannic Schelletter'}
+  .team-introduction
+    %h1= t('team.meet the team')
+    %ul
+      = render partial: 'team_introduction', locals: {name: 'Alex Senger'}
+      = render partial: 'team_introduction', locals: {name: 'Cornelius Görres'}
+      = render partial: 'team_introduction', locals: {name: 'Felix Naumann'}
+      = render partial: 'team_introduction', locals: {name: 'Gerrit Rüdebusch'}
+      = render partial: 'team_introduction', locals: {name: 'Henning Perl'}
+      = render partial: 'team_introduction', locals: {name: 'Marlena Schultz-Brunn'}
+      = render partial: 'team_introduction', locals: {name: 'Matthias Otterbach'}
+      = render partial: 'team_introduction', locals: {name: 'Monika Keßler'}
+      = render partial: 'team_introduction', locals: {name: 'Nick Modersitzki'}
+      = render partial: 'team_introduction', locals: {name: 'Simon Born'}
+      = render partial: 'team_introduction', locals: {name: 'Simone Stepp'}
+      = render partial: 'team_introduction', locals: {name: 'Stefan Timmermann'}
+      = render partial: 'team_introduction', locals: {name: 'Theresa Veer'}
+      = render partial: 'team_introduction', locals: {name: 'Yannic Schelletter'}
 
