--- a/app/assets/stylesheets/site.css.scss
+++ b/app/assets/stylesheets/site.css.scss
@@ -362,7 +362,7 @@ dl.sub-nav dd a { text-decoration: none; }
 
 @media #{$small-up} {
   h1 { font-size: $h1-font-size; }
-  h2 { font-size: $h2-font-size; }
+  h2 { font-size: $h2-font-size; font-style: italic; font-weight: normal }
   h3 { font-size: $h3-font-size; }
   h4 { font-size: $h4-font-size; }
   h5 { font-size: $h5-font-size; }
@@ -384,4 +384,13 @@ dl.sub-nav dd a { text-decoration: none; }
   blockquote {
     font-style: italic;
   }
+}
+
+.logo-like {
+  text-align: center;
+  color: $royal-purple;
+  font-size: rem-calc(60);
+  font-style: italic;
+  font-weight: normal;
+  line-height: 100%;
 }
