--- a/app/assets/stylesheets/site.css.scss
+++ b/app/assets/stylesheets/site.css.scss
@@ -362,7 +362,7 @@ dl.sub-nav dd a { text-decoration: none; }
 
 @media #{$small-up} {
   h1 { font-size: $h1-font-size; }
-  h2 { font-size: $h2-font-size; font-style: italic; font-weight: normal }
+  h2 { font-size: $h2-font-size; }
   h3 { font-size: $h3-font-size; }
   h4 { font-size: $h4-font-size; }
   h5 { font-size: $h5-font-size; }
