--- a/app/views/pages/plan.haml
+++ b/app/views/pages/plan.haml
@@ -23,4 +23,7 @@
                   %br
                   = l timeslot.start, format: :short_time
                   —
-                  = l timeslot.end, format: :time
+                  - if timeslot.open_end?
+                    = "open end"
+                  - else
+                    = l timeslot.end, format: :time
